--- a/Groups.ipynb
+++ b/Groups.ipynb
@@ -15,7 +15,7 @@
    ],
    "source": [
     "from arcgis.gis import GIS\n",
-    "gis = GIS(url=\"https://igestrategies.maps.arcgis.com\", username=\"Piphi5\")"
+    "gis = GIS(url=\"https://igestrategies.maps.arcgis.com\", username = \"Piphi5\")"
    ]
   },
   {
@@ -28,23 +28,28 @@
     "from ipywidgets import interact, interactive, fixed, interact_manual\n",
     "import ipywidgets as widgets\n",
     "from arcgis.features import FeatureLayer, GeoAccessor\n",
-    "\n",
+    "import os\n",
     "    \n",
     "groups_url = \"https://services4.arcgis.com/feSRYIeirl5nUF92/arcgis/rest/services/MHM_Group_Data/FeatureServer/0\"\n",
     "mhm_url = \"https://services4.arcgis.com/feSRYIeirl5nUF92/arcgis/rest/services/GLOBE_Observer_MHM_Measurements_Updated_Daily_Public_View/FeatureServer/0\"\n",
     "\n",
     "def get_data():\n",
-    "    def get_df(url):\n",
-    "        temp_layer = FeatureLayer(url)\n",
-    "        temp_df = GeoAccessor.from_layer(temp_layer)\n",
-    "        temp_df = temp_df.drop([\"SHAPE\", \"ObjectId\"], 1)\n",
+    "    if not os.path.exists(\"AGO Data\"):\n",
+    "        os.makedirs(\"AGO Data\")\n",
+    "        \n",
+    "    def get_df(item_id):\n",
+    "        data_item = gis.content.get(item_id)\n",
+    "        data_item.download(\"AGO Data\")\n",
+    "        temp_df = pd.read_csv(f'AGO Data\\\\{data_item.name.replace(\"_\", \"\")}', low_memory = False)\n",
+    "        #temp_df = temp_df.drop([\"SHAPE\", \"ObjectId\"], 1)\n",
     "        return temp_df\n",
     "    \n",
-    "    df = get_df(mhm_url)\n",
-    "    groups_df = get_df(groups_url)\n",
+    "    df = get_df(\"782b2c88db4f4d869f49f9261cef5d57\")\n",
+    "    groups_df = get_df(\"d2f5165a14c04b298d19bd64a3608f4c\").drop([\"Group Name\"], 1)\n",
     "    sorted_groups_df = groups_df.sort_values(\"measuredDate\", ascending=False).reset_index()\n",
     "    latest_date = sorted_groups_df[\"measuredDate\"].loc[0]\n",
     "    df = df[df[\"measuredDate\"] > latest_date].append(groups_df, ignore_index=True)\n",
+    "    df = df.drop([\"Unnamed: 0\"], 1)\n",
     "    return df\n",
     "\n",
     "data = None\n",
@@ -66,59 +71,63 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
     "if not os.path.exists(\"Images\"):\n",
     "    os.makedirs(\"Images\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import geopandas as gpd\n",
     "from arcgis.features import GeoAccessor\n",
     "from arcgis.features import SpatialDataFrame\n",
     "from arcgis.geoenrichment import enrich\n",
     "from arcgis.raster import ImageryLayer\n",
     "from arcgis.geometry import Geometry\n",
+    "import numpy as np\n",
     "\n",
     "groups_features = pd.DataFrame()\n",
     "def remove_groups():\n",
     "    global data, removed_groups\n",
     "    for removed_group in removed_groups:\n",
-    "        data = data[data[\"Group Data\"] != removed_group]\n",
+    "        rm_name = data[data[\"Group Data\"] == removed_group].iloc[0][\"Group Name\"]\n",
+    "        mask = data[\"Group Data\"] == removed_group\n",
+    "        data.loc[mask, \"Group Name\"] = f\"{rm_name}-Removed\"\n",
     "        \n",
     "def process_data(threshold):\n",
+    "    def set_group_name(date, latitude, source, site, longitude):\n",
+    "        return f\"({str(date)[:10]}, {source}, {site}, {latitude}, {longitude})\"\n",
+    "\n",
     "    global df, data, removed_groups, groups_features\n",
-    "    suspect_df = df.groupby(by=['measuredDate','latitude','mosquitohabitatmapperWaterSou_2','siteName','longitude']).filter(lambda x: len(x) > threshold)\n",
+    "    suspect_df = df.groupby(by=['measuredDate','latitude','mosquitohabitatmapperWaterSourceType','siteName','longitude']).filter(lambda x: len(x) > threshold)\n",
     "\n",
     "    # identify groups\n",
-    "    suspect_groups = suspect_df.groupby(by = ['measuredDate','latitude','mosquitohabitatmapperWaterSou_2','siteName','longitude'])\n",
+    "    suspect_groups = suspect_df.groupby(by = ['measuredDate','latitude','mosquitohabitatmapperWaterSourceType','siteName','longitude'])\n",
     "\n",
     "    # create a groups dataset\n",
-    "    groups_data = pd.DataFrame()\n",
-    "    group_num = 1 \n",
-    "    for group, temp in suspect_groups:\n",
-    "        new_df = temp.copy(True)\n",
-    "        new_df[\"Group Data\"] = str(group)\n",
-    "        new_df[\"Group Name\"] = str(group_num)\n",
-    "\n",
-    "        group_num += 1\n",
-    "        groups_data = groups_data.append(new_df, ignore_index = True)\n",
-    "\n",
-    "    data = GeoAccessor.from_xy(groups_data, \"longitude\", \"latitude\")\n",
+    "    vectorized_groups = np.vectorize(set_group_name)\n",
+    "    suspect_df[\"Group Data\"] = vectorized_groups(\n",
+    "        suspect_df['measuredDate'], \n",
+    "        suspect_df['latitude'].to_numpy(), \n",
+    "        suspect_df['mosquitohabitatmapperWaterSourceType'].to_numpy(), \n",
+    "        suspect_df['siteName'].to_numpy(),\n",
+    "        suspect_df['longitude'].to_numpy()\n",
+    "    )\n",
+    "    suspect_groups = suspect_df.groupby(by = ['measuredDate','latitude','mosquitohabitatmapperWaterSourceType','siteName','longitude'])\n",
+    "    group_nums = pd.Series(suspect_groups.ngroup(), name=\"Group Name\")\n",
+    "    data = pd.concat([suspect_df, group_nums], axis = 1)\n",
+    "    data = data.sort_values(by = \"Group Name\")\n",
     "    remove_groups()\n",
-    "    groups_features = data.copy(True)\n",
-    "\n",
-    "    groups_features.mosquitohabitatmapperComments.replace({r'[^\\x00-\\x7F]+':''}, regex=True, inplace=True)\n",
+    "    lat_lon_df = data[[\"longitude\", \"latitude\"]].copy(True)\n",
+    "    groups_features = GeoAccessor.from_xy(lat_lon_df, \"longitude\", \"latitude\")\n",
     "process_data(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +198,7 @@
     "        stored_threshold = threshold\n",
     "        deleted_length = len(removed_groups)\n",
     "        process_data(stored_threshold)\n",
-    "        update_map()\n",
+    "        \n",
     "    options = data[\"Group Name\"].unique().tolist()\n",
     "    options.insert(0, \"None\")\n",
     "    display(interactive(select_group, group = options))\n",
@@ -201,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,11 +225,13 @@
     "        item = gis.content.get(item_id)\n",
     "        \n",
     "        print(f\"Saving Groups CSV as {filename}\")\n",
-    "        data.to_csv(filename)\n",
+    "        rm = pd.Series(removed_groups)\n",
+    "        valid_data = data[~data[\"Group Data\"].isin(rm)]\n",
+    "        valid_data.to_csv(filename)\n",
     "        outcome = OverwriteFS.overwriteFeatureService(item, updateFile=filename, touchItems=True, verbose=True)\n",
     "        print(f\"Finished saving file: {outcome}\")\n",
     "    \n",
-    "download_button = widgets.Button(description='Download Data')\n",
+    "download_button = widgets.Button(description='Upload Data')\n",
     "download_out = widgets.Output()\n",
     "\n",
     "# linking button and function together using a button's method\n",
@@ -232,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +251,7 @@
     "import re\n",
     "import requests\n",
     "import sys\n",
-    "from PIL import Image\n",
+    "from IPython.display import Image\n",
     "\n",
     "\n",
     "def show_images(file):\n",
@@ -267,9 +278,9 @@
     "    for f in files:\n",
     "        os.remove(f)\n",
     "\n",
-    "    group_water_source = group[\"mosquitohabitatmapperWaterSou_1\"].dropna().tolist()\n",
-    "    group_abdomen = group[\"mosquitohabitatmapperAbdomenClo\"].dropna().tolist()\n",
-    "    group_larvae = group[\"mosquitohabitatmapperLarvaFullB\"].dropna().tolist()\n",
+    "    group_water_source = group[\"mosquitohabitatmapperWaterSourcePhotoUrls\"].dropna().tolist()\n",
+    "    group_abdomen = group[\"mosquitohabitatmapperAbdomenCloseupPhotoUrls\"].dropna().tolist()\n",
+    "    group_larvae = group[\"mosquitohabitatmapperLarvaFullBodyPhotoUrls\"].dropna().tolist()\n",
     "    group_urls = group_water_source + group_abdomen + group_larvae\n",
     "    dl = 0\n",
     "    total_length = len(group_urls)\n",
@@ -299,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,13 +335,27 @@
     "    display(threshold_modifier)\n",
     "    \n",
     "def delete_group(_):\n",
-    "    global removed_groups, group_data\n",
-    "    removed_groups.append(group_data[\"Group Data\"].iloc[0])\n",
+    "    global removed_groups, group_data, group_name\n",
+    "    if group_name == \"None\":\n",
+    "        return\n",
+    "    identifier = group_data[\"Group Data\"].iloc[0]\n",
+    "    \n",
+    "    # to ensure no duplicates\n",
+    "    if identifier not in removed_groups:\n",
+    "        removed_groups.append(identifier)\n",
+    "    \n",
     "    update_ui()\n",
     "    \n",
     "def undo_remove(_):\n",
-    "    global removed_groups\n",
-    "    removed_groups.pop()\n",
+    "    global removed_groups, group_data, group_name\n",
+    "    if \"Removed\" in str(group_name):\n",
+    "        removed_groups.remove(group_data[\"Group Data\"].iloc[0])\n",
+    "    else:\n",
+    "        try:\n",
+    "            removed_groups.pop()\n",
+    "        except IndexError:\n",
+    "            pass\n",
+    "    \n",
     "    update_ui()\n",
     "    \n",
     "def update_local(_):\n",
@@ -338,13 +363,14 @@
     "    df = get_data()\n",
     "    process_data(stored_threshold)\n",
     "    update_ui()\n",
+    "    update_map()\n",
     "    \n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,14 +397,41 @@
     "\n",
     "tabs.set_title(0, \"Threshold Selection\")\n",
     "tabs.set_title(1, \"Photo Downloader\")\n",
-    "tabs.set_title(2, \"Data Download\")"
+    "tabs.set_title(2, \"Data Upload\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3c4eee68c07344d89099e0ffda37f287",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "MapView(layout=Layout(height='400px', width='100%'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div class=\"map-static-img-preview-a09c2d4b-0133-41e9-8f9f-92cccd5089e9\"><img src=\"\"></img></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "add_layer(m1)\n",
     "m1"
@@ -386,13 +439,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4743c275fa4c46e2a232e8ea98dbbbf2",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Tab(children=(VBox(children=(HBox(children=(Button(description='Delete Group', style=ButtonStyle()), Button(de…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "tabs"
    ]
