--- a/Groups.ipynb
+++ b/Groups.ipynb
@@ -29,20 +29,17 @@
     "import ipywidgets as widgets\n",
     "from arcgis.features import FeatureLayer, GeoAccessor\n",
     "import os\n",
-    "    \n",
-    "groups_url = \"https://services4.arcgis.com/feSRYIeirl5nUF92/arcgis/rest/services/MHM_Group_Data/FeatureServer/0\"\n",
-    "mhm_url = \"https://services4.arcgis.com/feSRYIeirl5nUF92/arcgis/rest/services/GLOBE_Observer_MHM_Measurements_Updated_Daily_Public_View/FeatureServer/0\"\n",
     "\n",
     "def get_data():\n",
-    "    if not os.path.exists(\"AGO Data\"):\n",
-    "        os.makedirs(\"AGO Data\")\n",
-    "        \n",
     "    def get_df(item_id):\n",
     "        data_item = gis.content.get(item_id)\n",
     "        data_item.download(\"AGO Data\")\n",
     "        temp_df = pd.read_csv(f'AGO Data\\\\{data_item.name.replace(\"_\", \"\")}', low_memory = False)\n",
-    "        #temp_df = temp_df.drop([\"SHAPE\", \"ObjectId\"], 1)\n",
     "        return temp_df\n",
+    "    \n",
+    "    \n",
+    "    if not os.path.exists(\"AGO Data\"):\n",
+    "        os.makedirs(\"AGO Data\")\n",
     "    \n",
     "    df = get_df(\"782b2c88db4f4d869f49f9261cef5d57\")\n",
     "    groups_df = get_df(\"d2f5165a14c04b298d19bd64a3608f4c\").drop([\"Group Name\"], 1)\n",
@@ -83,8 +80,6 @@
    "source": [
     "from arcgis.features import GeoAccessor\n",
     "from arcgis.features import SpatialDataFrame\n",
-    "from arcgis.geoenrichment import enrich\n",
-    "from arcgis.raster import ImageryLayer\n",
     "from arcgis.geometry import Geometry\n",
     "import numpy as np\n",
     "\n",
@@ -95,6 +90,7 @@
     "        rm_name = data[data[\"Group Data\"] == removed_group].iloc[0][\"Group Name\"]\n",
     "        mask = data[\"Group Data\"] == removed_group\n",
     "        data.loc[mask, \"Group Name\"] = f\"{rm_name}-Removed\"\n",
+    "        \n",
     "        \n",
     "def process_data(threshold):\n",
     "    def set_group_name(date, latitude, source, site, longitude):\n",
@@ -115,6 +111,7 @@
     "        suspect_df['siteName'].to_numpy(),\n",
     "        suspect_df['longitude'].to_numpy()\n",
     "    )\n",
+    "    \n",
     "    suspect_groups = suspect_df.groupby(by = ['measuredDate','latitude','mosquitohabitatmapperWaterSourceType','siteName','longitude'])\n",
     "    group_nums = pd.Series(suspect_groups.ngroup(), name=\"Group Name\")\n",
     "    data = pd.concat([suspect_df, group_nums], axis = 1)\n",
@@ -122,6 +119,8 @@
     "    remove_groups()\n",
     "    lat_lon_df = data[[\"longitude\", \"latitude\"]].copy(True)\n",
     "    groups_features = GeoAccessor.from_xy(lat_lon_df, \"longitude\", \"latitude\")\n",
+    "    \n",
+    "    \n",
     "process_data(10)"
    ]
   },
@@ -135,10 +134,7 @@
     "from IPython.display import display, clear_output\n",
     "import ipywidgets as widgets\n",
     "\n",
-    "\n",
-    "\n",
     "m1 = gis.map('MHM Groups')\n",
-    "\n",
     "\n",
     "def add_layer(map_obj):\n",
     "    map_obj.basemap = 'dark-gray-vector'\n",
@@ -148,6 +144,7 @@
     "\n",
     "    except KeyError:\n",
     "        print(\"no such group exists\")\n",
+    "    \n",
     "    \n",
     "def update_map():\n",
     "    global m1\n",
@@ -163,6 +160,7 @@
    "source": [
     "group_name = \"\"\n",
     "group_data = pd.DataFrame()\n",
+    "\n",
     "def move_to_group(group):\n",
     "    global group_data, m1\n",
     "    if group != \"None\":\n",
@@ -204,7 +202,6 @@
     "    display(interactive(select_group, group = options))\n",
     "    \n",
     "\n",
-    "\n",
     "threshold_modifier = widgets.VBox([interactive(get_groups, threshold = widgets.IntSlider(10, 1, 100, continuous_update = False)), threshold_output])"
    ]
   },
@@ -230,6 +227,7 @@
     "        valid_data.to_csv(filename)\n",
     "        outcome = OverwriteFS.overwriteFeatureService(item, updateFile=filename, touchItems=True, verbose=True)\n",
     "        print(f\"Finished saving file: {outcome}\")\n",
+    "    \n",
     "    \n",
     "download_button = widgets.Button(description='Upload Data')\n",
     "download_out = widgets.Output()\n",
@@ -260,6 +258,7 @@
     "    except TypeError:\n",
     "        print(\"No Pictures to download\")\n",
     "\n",
+    "        \n",
     "def download_picture(url, directory):\n",
     "  \n",
     "    def get_picture(file_name):\n",
@@ -295,6 +294,7 @@
     "        sys.stdout.write(\"\\r[%s%s]\" % ('=' * done, ' ' * (50-done)) )    \n",
     "        sys.stdout.flush()\n",
     "\n",
+    "        \n",
     "def download_photos(_):\n",
     "    # \"linking function with output\"\n",
     "    with out:\n",
@@ -334,6 +334,7 @@
     "    remove_groups()\n",
     "    display(threshold_modifier)\n",
     "    \n",
+    "    \n",
     "def delete_group(_):\n",
     "    global removed_groups, group_data, group_name\n",
     "    if group_name == \"None\":\n",
@@ -345,6 +346,7 @@
     "        removed_groups.append(identifier)\n",
     "    \n",
     "    update_ui()\n",
+    "    \n",
     "    \n",
     "def undo_remove(_):\n",
     "    global removed_groups, group_data, group_name\n",
@@ -358,14 +360,13 @@
     "    \n",
     "    update_ui()\n",
     "    \n",
+    "    \n",
     "def update_local(_):\n",
     "    global df, stored_threshold\n",
     "    df = get_data()\n",
     "    process_data(stored_threshold)\n",
     "    update_ui()\n",
-    "    update_map()\n",
-    "    \n",
-    "    "
+    "    update_map()"
    ]
   },
   {
@@ -408,7 +409,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3c4eee68c07344d89099e0ffda37f287",
+       "model_id": "8f417dd081e54a6b8b546e3d296827ff",
        "version_major": 2,
        "version_minor": 0
       },
@@ -422,7 +423,7 @@
     {
      "data": {
       "text/html": [
-       "<div class=\"map-static-img-preview-a09c2d4b-0133-41e9-8f9f-92cccd5089e9\"><img src=\"\"></img></div>"
+       "<div class=\"map-static-img-preview-4a12d5db-25e6-4a31-a69f-c048d5bc4c3d\"><img src=\"\"></img></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -449,7 +450,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4743c275fa4c46e2a232e8ea98dbbbf2",
+       "model_id": "33f86e623d194e6fa4757c4db203e36f",
        "version_major": 2,
        "version_minor": 0
       },
