--- a/Groups.ipynb
+++ b/Groups.ipynb
@@ -4,24 +4,6 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Enter password:  ·········\n"
-     ]
-    }
-   ],
-   "source": [
-    "from arcgis.gis import GIS\n",
-    "gis = GIS(url=\"https://igestrategies.maps.arcgis.com\", username = \"Piphi5\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -29,7 +11,8 @@
     "import ipywidgets as widgets\n",
     "from arcgis.features import FeatureLayer, GeoAccessor\n",
     "import os\n",
-    "\n",
+    "gis = None\n",
+    "df = None\n",
     "def get_data():\n",
     "    def get_df(item_id):\n",
     "        data_item = gis.content.get(item_id)\n",
@@ -40,7 +23,7 @@
     "    \n",
     "    if not os.path.exists(\"AGO Data\"):\n",
     "        os.makedirs(\"AGO Data\")\n",
-    "    \n",
+    "    global df\n",
     "    df = get_df(\"782b2c88db4f4d869f49f9261cef5d57\")\n",
     "    groups_df = get_df(\"d2f5165a14c04b298d19bd64a3608f4c\").drop([\"Group Name\"], 1)\n",
     "    sorted_groups_df = groups_df.sort_values(\"measuredDate\", ascending=False).reset_index()\n",
@@ -55,16 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = get_data()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,13 +94,12 @@
     "    lat_lon_df = data[[\"longitude\", \"latitude\"]].copy(True)\n",
     "    groups_features = GeoAccessor.from_xy(lat_lon_df, \"longitude\", \"latitude\")\n",
     "    \n",
-    "    \n",
-    "process_data(10)"
+    "    \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +107,7 @@
     "from IPython.display import display, clear_output\n",
     "import ipywidgets as widgets\n",
     "\n",
-    "m1 = gis.map('MHM Groups')\n",
+    "m1 = None\n",
     "\n",
     "def add_layer(map_obj):\n",
     "    map_obj.basemap = 'dark-gray-vector'\n",
@@ -154,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,8 +138,8 @@
     "    global group_data, m1\n",
     "    if group != \"None\":\n",
     "        group_data = data[data[\"Group Name\"] == group]\n",
-    "        latitude = group_data[\"latitude\"].iloc[0]\n",
-    "        longitude = group_data[\"longitude\"].iloc[0]\n",
+    "        latitude = group_data[\"mosquitohabitatmapperMeasurementLatitude\"].iloc[0]\n",
+    "        longitude = group_data[\"mosquitohabitatmapperMeasurementLongitude\"].iloc[0]\n",
     "        m1.center = [latitude, longitude]\n",
     "    else:\n",
     "        group_data = pd.DataFrame()\n",
@@ -181,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,14 +276,14 @@
     "        print(\"Downloading Photos:\")\n",
     "        get_pictures(data[data[\"Group Name\"] == group_name])\n",
     "        print(' Finished Downloading!')\n",
-    "        \n",
-    "        photo_displayer = interactive(show_images, file=os.listdir('Images/')) \n",
+    "        files = os.listdir('Images/')\n",
+    "        photo_displayer = interactive(show_images, file=files) \n",
     "        display(photo_displayer)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,8 +335,8 @@
     "    \n",
     "    \n",
     "def update_local(_):\n",
-    "    global df, stored_threshold\n",
-    "    df = get_data()\n",
+    "    global stored_threshold\n",
+    "    get_data()\n",
     "    process_data(stored_threshold)\n",
     "    update_ui()\n",
     "    update_map()"
@@ -371,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,59 +376,107 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "from arcgis.gis import GIS\n",
+    "\n",
+    "def update_info(wdgt):\n",
+    "    print(\"UPDATING\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "username_widget = widgets.Text(\n",
+    "    value='',\n",
+    "    placeholder='Enter Username',\n",
+    "    description='Username',\n",
+    "    disabled=False\n",
+    ")\n",
+    "\n",
+    "\n",
+    "password_widget = widgets.Password(\n",
+    "    value='',\n",
+    "    placeholder='Enter Password',\n",
+    "    description='Password',\n",
+    "    disabled=False\n",
+    ")\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8f417dd081e54a6b8b546e3d296827ff",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "MapView(layout=Layout(height='400px', width='100%'))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div class=\"map-static-img-preview-4a12d5db-25e6-4a31-a69f-c048d5bc4c3d\"><img src=\"\"></img></div>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "add_layer(m1)\n",
-    "m1"
+    "from ipywidgets import Layout\n",
+    "def get_credentials():\n",
+    "    with open(\"info.json\") as f:\n",
+    "        data = None\n",
+    "        try:\n",
+    "            data = json.loads(f)\n",
+    "            return data[\"Username\"], data[\"Password\"]\n",
+    "        except (TypeError, KeyError):\n",
+    "            print(\"Please enter a username/password\")\n",
+    "\n",
+    "\n",
+    "login_out = widgets.Output()\n",
+    "login_out1 = widgets.Output()\n",
+    "\n",
+    "def display_ui(_):\n",
+    "    username, password = username_widget.value, password_widget.value\n",
+    "    global gis, m1\n",
+    "    \n",
+    "    \n",
+    "    username_widget.value = \"\"\n",
+    "    password_widget.value = \"\"\n",
+    "    \n",
+    "    with login_out:\n",
+    "        clear_output()\n",
+    "        display(widgets.Label(\"Attempting to authenticate\"))\n",
+    "        try:\n",
+    "            gis = GIS(url=\"https://igestrategies.maps.arcgis.com\", username = username, password = password)\n",
+    "            display(widgets.Label(\"Authentication Successful, Loading Dashboard...\"))\n",
+    "            get_data()\n",
+    "            process_data(10)\n",
+    "            m1 = gis.map('MHM Groups')\n",
+    "            add_layer(m1)\n",
+    "            clear_output()\n",
+    "            display(widgets.Box([m1]))\n",
+    "            with login_out1:\n",
+    "                display(tabs)\n",
+    "        except Exception as e:\n",
+    "            display(widgets.Label(f\"Authentication failed: {repr(e)}\"))\n",
+    "        \n",
+    "login_button = widgets.Button(description = \"Login\")\n",
+    "login_button.on_click(display_ui)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "33f86e623d194e6fa4757c4db203e36f",
+       "model_id": "e82adf857f10463f832aa1e6682bcd4b",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Tab(children=(VBox(children=(HBox(children=(Button(description='Delete Group', style=ButtonStyle()), Button(de…"
+       "VBox(children=(Text(value='', description='Username', placeholder='Enter Username'), Password(description='Pas…"
       ]
      },
      "metadata": {},
@@ -463,7 +484,80 @@
     }
    ],
    "source": [
-    "tabs"
+    "login_ui = widgets.VBox([username_widget, password_widget,])\n",
+    "login_ui"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "127d66ff0b2d456bb83cc4023de889a8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(description='Login', style=ButtonStyle())"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "login_button"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1eb62d9b01874c75b9c2f9b6aca7e550",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "login_out"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3cd266d09c7545e783c10793afc42b56",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "login_out1"
    ]
   },
   {
@@ -491,6 +585,9 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.5"
+  },
+  "voila": {
+   "theme": "dark"
   }
  },
  "nbformat": 4,
