Initial Authentication attempt

--- a/Groups.ipynb
+++ b/Groups.ipynb
@@ -2,24 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Enter password:  ·········\n"
-     ]
-    }
-   ],
-   "source": [
-    "from arcgis.gis import GIS\n",
-    "gis = GIS(url=\"https://igestrategies.maps.arcgis.com\", username = \"Piphi5\")"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
@@ -29,7 +11,8 @@
     "import ipywidgets as widgets\n",
     "from arcgis.features import FeatureLayer, GeoAccessor\n",
     "import os\n",
-    "\n",
+    "gis = None\n",
+    "df = None\n",
     "def get_data():\n",
     "    def get_df(item_id):\n",
     "        data_item = gis.content.get(item_id)\n",
@@ -40,7 +23,7 @@
     "    \n",
     "    if not os.path.exists(\"AGO Data\"):\n",
     "        os.makedirs(\"AGO Data\")\n",
-    "    \n",
+    "    global df\n",
     "    df = get_df(\"782b2c88db4f4d869f49f9261cef5d57\")\n",
     "    groups_df = get_df(\"d2f5165a14c04b298d19bd64a3608f4c\").drop([\"Group Name\"], 1)\n",
     "    sorted_groups_df = groups_df.sort_values(\"measuredDate\", ascending=False).reset_index()\n",
@@ -59,22 +42,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = get_data()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "if not os.path.exists(\"Images\"):\n",
     "    os.makedirs(\"Images\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,13 +94,12 @@
     "    lat_lon_df = data[[\"longitude\", \"latitude\"]].copy(True)\n",
     "    groups_features = GeoAccessor.from_xy(lat_lon_df, \"longitude\", \"latitude\")\n",
     "    \n",
-    "    \n",
-    "process_data(10)"
+    "    \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +107,7 @@
     "from IPython.display import display, clear_output\n",
     "import ipywidgets as widgets\n",
     "\n",
-    "m1 = gis.map('MHM Groups')\n",
+    "m1 = None\n",
     "\n",
     "def add_layer(map_obj):\n",
     "    map_obj.basemap = 'dark-gray-vector'\n",
@@ -154,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,14 +276,14 @@
     "        print(\"Downloading Photos:\")\n",
     "        get_pictures(data[data[\"Group Name\"] == group_name])\n",
     "        print(' Finished Downloading!')\n",
-    "        \n",
-    "        photo_displayer = interactive(show_images, file=os.listdir('Images/')) \n",
+    "        files = os.listdir('Images/')\n",
+    "        photo_displayer = interactive(show_images, file=files) \n",
     "        display(photo_displayer)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,8 +335,8 @@
     "    \n",
     "    \n",
     "def update_local(_):\n",
-    "    global df, stored_threshold\n",
-    "    df = get_data()\n",
+    "    global stored_threshold\n",
+    "    get_data()\n",
     "    process_data(stored_threshold)\n",
     "    update_ui()\n",
     "    update_map()"
@@ -371,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,18 +376,124 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "from arcgis.gis import GIS\n",
+    "\n",
+    "def update_info(wdgt):\n",
+    "    print(\"UPDATING\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "username_widget = widgets.Text(\n",
+    "    value='',\n",
+    "    placeholder='Enter Username',\n",
+    "    description='Username',\n",
+    "    disabled=False\n",
+    ")\n",
+    "\n",
+    "\n",
+    "password_widget = widgets.Password(\n",
+    "    value='',\n",
+    "    placeholder='Enter Password',\n",
+    "    description='Password',\n",
+    "    disabled=False\n",
+    ")\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_credentials():\n",
+    "    with open(\"info.json\") as f:\n",
+    "        data = None\n",
+    "        try:\n",
+    "            data = json.loads(f)\n",
+    "            return data[\"Username\"], data[\"Password\"]\n",
+    "        except (TypeError, KeyError):\n",
+    "            print(\"Please enter a username/password\")\n",
+    "\n",
+    "def display_ui(_):\n",
+    "    username, password = username_widget.value, password_widget.value\n",
+    "    global gis, m1\n",
+    "    \n",
+    "    \n",
+    "    username_widget.value = \"\"\n",
+    "    password_widget.value = \"\"\n",
+    "    \n",
+    "    with login_out:\n",
+    "        clear_output()\n",
+    "        display(widgets.Label(\"Attempting to authenticate\"))\n",
+    "        gis = GIS(url=\"https://igestrategies.maps.arcgis.com\", username = username, password = password)\n",
+    "        display(widgets.Label(\"Authentication Successful, Loading Dashboard...\"))\n",
+    "        get_data()\n",
+    "        process_data(10)\n",
+    "        m1 = gis.map('MHM Groups')\n",
+    "        add_layer(m1)\n",
+    "        clear_output()\n",
+    "        display(widgets.Box([m1]))\n",
+    "        display(tabs)\n",
+    "\n",
+    "login_button = widgets.Button(description = \"Login\")\n",
+    "login_button.on_click(display_ui)\n",
+    "login_out = widgets.Output()\n",
+    "login_button = widgets.VBox([login_button, login_out])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8f417dd081e54a6b8b546e3d296827ff",
+       "model_id": "95b00658e866496b97226521fe856943",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "MapView(layout=Layout(height='400px', width='100%'))"
+       "VBox(children=(Text(value='', description='Username', placeholder='Enter Username'), Password(description='Pas…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "ui = widgets.VBox([username_widget, password_widget, login_button])\n",
+    "ui"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "24c5b329d63b467780b363296a5ffae9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "MapView(jupyter_target='lab', layout=Layout(height='400px', width='100%'), ready=True)"
       ]
      },
      "metadata": {},
@@ -423,7 +502,7 @@
     {
      "data": {
       "text/html": [
-       "<div class=\"map-static-img-preview-4a12d5db-25e6-4a31-a69f-c048d5bc4c3d\"><img src=\"\"></img></div>"
+       "<div class=\"map-static-img-preview-c522cd53-cc33-4a8e-ad69-748982b54ef7\"><img src=\"\"></img></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -434,23 +513,66 @@
     }
    ],
    "source": [
-    "add_layer(m1)\n",
     "m1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
+   "execution_count": 24,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "33f86e623d194e6fa4757c4db203e36f",
+       "model_id": "689cd951207d422c8299ea43954c4886",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Tab(children=(VBox(children=(HBox(children=(Button(description='Delete Group', style=ButtonStyle()), Button(de…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "tabs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f0c1815e48364493823f9ecb387ba1b8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(Box(children=(MapView(jupyter_target='lab', layout=Layout(height='400px', width='100%'), ready=…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "widgets.VBox([widgets.Box([m1]), tabs])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "689cd951207d422c8299ea43954c4886",
        "version_major": 2,
        "version_minor": 0
       },
