--- a/Groups.ipynb
+++ b/Groups.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,8 +138,8 @@
     "    global group_data, m1\n",
     "    if group != \"None\":\n",
     "        group_data = data[data[\"Group Name\"] == group]\n",
-    "        latitude = group_data[\"latitude\"].iloc[0]\n",
-    "        longitude = group_data[\"longitude\"].iloc[0]\n",
+    "        latitude = group_data[\"mosquitohabitatmapperMeasurementLatitude\"].iloc[0]\n",
+    "        longitude = group_data[\"mosquitohabitatmapperMeasurementLongitude\"].iloc[0]\n",
     "        m1.center = [latitude, longitude]\n",
     "    else:\n",
     "        group_data = pd.DataFrame()\n",
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,10 +415,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from ipywidgets import Layout\n",
     "def get_credentials():\n",
     "    with open(\"info.json\") as f:\n",
     "        data = None\n",
@@ -427,6 +428,10 @@
     "            return data[\"Username\"], data[\"Password\"]\n",
     "        except (TypeError, KeyError):\n",
     "            print(\"Please enter a username/password\")\n",
+    "\n",
+    "\n",
+    "login_out = widgets.Output()\n",
+    "login_out1 = widgets.Output()\n",
     "\n",
     "def display_ui(_):\n",
     "    username, password = username_widget.value, password_widget.value\n",
@@ -439,31 +444,34 @@
     "    with login_out:\n",
     "        clear_output()\n",
     "        display(widgets.Label(\"Attempting to authenticate\"))\n",
-    "        gis = GIS(url=\"https://igestrategies.maps.arcgis.com\", username = username, password = password)\n",
-    "        display(widgets.Label(\"Authentication Successful, Loading Dashboard...\"))\n",
-    "        get_data()\n",
-    "        process_data(10)\n",
-    "        m1 = gis.map('MHM Groups')\n",
-    "        add_layer(m1)\n",
-    "        clear_output()\n",
-    "        display(widgets.Box([m1]))\n",
-    "        display(tabs)\n",
-    "\n",
+    "        try:\n",
+    "            gis = GIS(url=\"https://igestrategies.maps.arcgis.com\", username = username, password = password)\n",
+    "            display(widgets.Label(\"Authentication Successful, Loading Dashboard...\"))\n",
+    "            get_data()\n",
+    "            process_data(10)\n",
+    "            m1 = gis.map('MHM Groups')\n",
+    "            add_layer(m1)\n",
+    "            clear_output()\n",
+    "            display(widgets.Box([m1]))\n",
+    "            with login_out1:\n",
+    "                display(tabs)\n",
+    "        except Exception as e:\n",
+    "            display(widgets.Label(f\"Authentication failed: {repr(e)}\"))\n",
+    "        \n",
     "login_button = widgets.Button(description = \"Login\")\n",
     "login_button.on_click(display_ui)\n",
-    "login_out = widgets.Output()\n",
-    "login_button = widgets.VBox([login_button, login_out])"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "95b00658e866496b97226521fe856943",
+       "model_id": "e82adf857f10463f832aa1e6682bcd4b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -476,36 +484,24 @@
     }
    ],
    "source": [
-    "ui = widgets.VBox([username_widget, password_widget, login_button])\n",
-    "ui"
+    "login_ui = widgets.VBox([username_widget, password_widget,])\n",
+    "login_ui"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "24c5b329d63b467780b363296a5ffae9",
+       "model_id": "127d66ff0b2d456bb83cc4023de889a8",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "MapView(jupyter_target='lab', layout=Layout(height='400px', width='100%'), ready=True)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div class=\"map-static-img-preview-c522cd53-cc33-4a8e-ad69-748982b54ef7\"><img src=\"\"></img></div>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
+       "Button(description='Login', style=ButtonStyle())"
       ]
      },
      "metadata": {},
@@ -513,23 +509,23 @@
     }
    ],
    "source": [
-    "m1"
+    "login_button"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "689cd951207d422c8299ea43954c4886",
+       "model_id": "1eb62d9b01874c75b9c2f9b6aca7e550",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Tab(children=(VBox(children=(HBox(children=(Button(description='Delete Group', style=ButtonStyle()), Button(de…"
+       "Output()"
       ]
      },
      "metadata": {},
@@ -537,23 +533,23 @@
     }
    ],
    "source": [
-    "tabs"
+    "login_out"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f0c1815e48364493823f9ecb387ba1b8",
+       "model_id": "3cd266d09c7545e783c10793afc42b56",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(Box(children=(MapView(jupyter_target='lab', layout=Layout(height='400px', width='100%'), ready=…"
+       "Output()"
       ]
      },
      "metadata": {},
@@ -561,31 +557,7 @@
     }
    ],
    "source": [
-    "widgets.VBox([widgets.Box([m1]), tabs])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "689cd951207d422c8299ea43954c4886",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Tab(children=(VBox(children=(HBox(children=(Button(description='Delete Group', style=ButtonStyle()), Button(de…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "tabs"
+    "login_out1"
    ]
   },
   {
@@ -613,6 +585,9 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.5"
+  },
+  "voila": {
+   "theme": "dark"
   }
  },
  "nbformat": 4,
